--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -62,10 +62,52 @@
     height: 100%
     &__content
         width: 100%
-        height: 100%
-        margin: 0 auto
-    &__img
+        height: 800px
+        display: flex
+        justify-content: center
+        align-items: center
+        position: relative
+    &__heading-box
         width: 100%
+        height: 100px
+        min-height: 340px
+        position: absolute
+        z-index: 1
+    &__title
+        font-weight: bold
+        font-size: $big-title-size
+        line-height: 166px
+        color: $color-White
+        opacity: 0.9
+        text-transform: uppercase
+        padding: 20px 80px
+    &__title-span
+        padding: 10px 80px
+    &__img-box
+        width: 100%
+        height: 100%
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        &_above
+            z-index: 1
+        img
+            width: 100%
+            height: 100%
+
+.marquee
+    overflow: hidden
+    font-size: 0
+    text-transform: uppercase
+    white-space: nowrap
+    cursor: default
+    user-select: none
+    transition: all 0.3s ease 0s
+    &__inner
+        white-space: nowrap
+        display: inline-block
 
 .fav-btn
     top: 0
