--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -2,9 +2,7 @@
 @import "./common/fonts.scss"
 @import "./common/_nullstyle.scss"
 
-// html,
-// body
-// 	overflow-x: hidden
+@import ./pages/map
 
 body
 	min-width: 320px
