--- a/src/styles/common/header.sass
+++ b/src/styles/common/header.sass
@@ -1,10 +1,14 @@
 @import ./_vars
+
+header._hidden
+	display: none
+
 .header
 	width: 100%
 	min-height: 86px
 	padding: 20px 0
 	position: relative
-	z-index: 1
+	z-index: 10
 	margin: 0 0 -86px 0
 	&__container
 		width: 100%
