finished layout of for-men page

--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -25,5 +25,7 @@ $color-black_2: #292929
 $color-White: #ffffff
 $color-placeholder: #DDDDDD
 $color-Gray_1: #7A7A7A
+$color-Gray_2: #D6D6D6
+$color-breadcrumbs: #515151
 
 
