--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -13,7 +13,7 @@ footer.footer-top
                         .subscribe__agreement-text Подписываясь на рассылку, вы соглашаетесь с условиями 
                             a.subscribe__link(href="#")  Политики конфиденциальности
     section.section.news-promo.section__slider
-        .container
+        .container.news-promo__container
             .section__heading.slider__heading 
                 h2.section__title Новости / Акции
                 a.section__link(href="#") Смотреть все
