--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -37,6 +37,7 @@ button
 
 @import "./common/header.sass"
 @import "./pages/index.sass"
+@import ./pages/for-men.sass
 @import "./common/footer.sass"
 @import ./common/_adaptive
 
