--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -7,7 +7,7 @@
                 left: 48.7%
 
 @media screen and (max-width: 1280px)
-    .header
+    .header-top
         &__menu-link
             font-size: 16px
             margin: 0
@@ -143,6 +143,11 @@
             gap: 30px
 
 @media screen and (max-width: 768px)
+    .sub-menu
+        &__list
+            overflow-x: auto
+            justify-content: flex-start
+            padding: 10px 0
     .section
         margin: 35px 0 0 0
     .main-banner
