--- a/src/styles/common/header.sass
+++ b/src/styles/common/header.sass
@@ -2,8 +2,10 @@
 
 header._hidden
 	display: none
+.header-bottom._hidden
+	display: none
 
-.header
+.header-top
 	width: 100%
 	min-height: 86px
 	padding: 20px 0
@@ -43,9 +45,100 @@ header._hidden
 		display: flex
 		justify-content: center
 		align-items: center
-		z-index: 49
+		z-index: 15
+	&__logo-img
+		color: $color-White
+
+// header not home page
+
+header._white
+	background-color: $color-White
+	border-bottom: 2px solid $color-Gray_2
+	.header-top
+		&__menu-link
+			color: $color-Black
+		&__logo-img
+			color: $color-Black
+	.menu__icon span,
+	.menu__icon::before,
+	.menu__icon::after
+		background-color: $color-Black
+	.menu__body._active .menu__link
+		color: $color-White
+	.menu__icon._active
+		&::before,
+		&::after
+			background-color: $color-White
+.header-top._fixed
+	position: fixed
+	top: 0
+	left: 0
+
+.header-bottom
+	margin: 86px 0 0 0
+	width: 100%
+	// height: 300px
+	&__banner
+		width: 100%
+		height: 100%
+		position: relative
+		height: 300px
+	&__img-box
+		position: absolute
+		width: 100%
+		height: 300px
+		
+	&__img
+		width: 100%
+		height: 100%
+		object-position: top
+	&__heading
+		position: absolute
+		display: flex
+		justify-content: center
+		align-items: center
+		width: 100%
+		height: 100%
+	&__title
+		font-weight: bold
+		font-size: 48px
+		line-height: 48px
+		color: $color-White
 
 // burger-menu
 .menu
 	&__icon
 		display: none
+
+// Breadcrumbs
+
+.breadcrumbs
+	&__content
+		width: 100%
+		padding: 20px 0
+	&__list
+		display: flex
+		justify-content: flex-start
+	&__link
+		color: $color-breadcrumbs
+
+.sub-menu
+	width: 100%
+	&__container
+		width: 100%
+		margin: 5px auto
+		display: flex
+		justify-content: center
+		align-items: center
+	&__list
+		display: flex
+		justify-content: center
+		align-items: center
+	&__link
+		padding: 10px
+		margin: 0 20px
+		color: $color-Black
+		font-size: 18px
+		line-height: 21px
+		&:hover
+			text-decoration: underline
