--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -59,17 +59,17 @@
 .main-banner
     margin: 0
     width: 100%
-    height: 100%
+    height: 100vh
     &__content
         width: 100%
-        height: 800px
+        height: 100vh
         display: flex
         justify-content: center
         align-items: center
         position: relative
     &__heading-box
         width: 100%
-        height: 100px
+        height: auto
         min-height: 340px
         position: absolute
         z-index: 1
@@ -80,7 +80,7 @@
         color: $color-White
         opacity: 0.9
         text-transform: uppercase
-        padding: 20px 80px
+        padding: 20px 0
     &__title-span
         padding: 10px 80px
     &__img-box
@@ -104,7 +104,7 @@
     white-space: nowrap
     cursor: default
     user-select: none
-    transition: all 0.3s ease 0s
+
     &__inner
         white-space: nowrap
         display: inline-block
@@ -129,6 +129,13 @@
         &:hover> .add-to-cart__box
             visibility: visible
             opacity: 1
+            z-index: 1
+        &:hover
+            .slider3__img-box
+                filter: brightness(0.7)
+                z-index: 0
+                transition: all 0.3s ease 0s
+                
     .add-to-cart
         &__box
             display: flex
@@ -156,8 +163,10 @@
             display: flex
             justify-content: center
             align-items: center
-            transform: translate(0, 65px)
+            transform: translate(0, 70px)
             transition: all 0.3s ease 0s
+            &:hover
+                box-shadow: 0 0 3px 3px $color-graphite
 
     &__fav-img-box
         position: absolute
