--- a/src/styles/pages/map.sass
+++ b/src/styles/pages/map.sass
@@ -14,6 +14,7 @@
     .header__logo-img
         width: 250px
         height: 100%
+        color: $color-White
 .map-table
     margin-top: 50px
     &__link
