--- a/src/templates/pages/home-page.pug
+++ b/src/templates/pages/home-page.pug
@@ -11,12 +11,12 @@ block content
                 .main-banner__content
                     .main-banner__heading-box
                         .main-banner__heading.main-banner__heading_top#marquee1.marquee
-                            h1.main-banner__title.main-banner__title_top.marquee__inner
+                            .main-banner__title.main-banner__title_top.marquee__inner
                                 span.main-banner__title-span champler
                                 span.main-banner__title-span champler
                                 span.main-banner__title-span champler
                         .main-banner__heading.main-banner__heading_bottom#marquee2.marquee
-                            h2.main-banner__title.main-banner__title_bottom.marquee__inner
+                            .main-banner__title.main-banner__title_bottom.marquee__inner
                                 span.main-banner__title-span sportsshoes
                                 span.main-banner__title-span sportsshoes
                     .main-banner__img-box.main-banner__img-box_below
@@ -26,7 +26,7 @@ block content
             section.section.sale.section__slider
                 .container
                     .section__heading.slider__heading 
-                        h2.section__title Sale до 50%
+                        h1.section__title Sale до 50%
                         a.section__link(href="#") Смотреть все
                     .sale__slider
                         .swiper-container.slider3
