--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -35,10 +35,12 @@ button
 	padding: $content-padding
 	
 
-@import "./common/header.sass"
-@import "./pages/index.sass"
-@import ./pages/for-men.sass
-@import "./common/footer.sass"
+@import ./common/header
+@import ./pages/index
+@import ./pages/for-men
+@import ./pages/collections
+@import ./pages/kinds-of-sports
+@import ./common/footer
 @import ./common/_adaptive
 
 // @media screen and (max-width: 1274px) {
