finished layout of subcategory page

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -21,7 +21,7 @@ button
 	display: flex
 	justify-content: center
 	align-items: center
-	
+
 .wrapper
 	max-width: $siteWidth
 	width: 100%
@@ -33,13 +33,13 @@ button
 	width: 100%
 	margin: 0 auto
 	padding: $content-padding
-	
 
 @import ./common/header
 @import ./pages/index
 @import ./pages/for-men
 @import ./pages/collections
 @import ./pages/kinds-of-sports
+@import ./pages/subcategory
 @import ./common/footer
 @import ./common/_adaptive
 
