--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -26,6 +26,7 @@ $color-White: #ffffff
 $color-placeholder: #DDDDDD
 $color-Gray_1: #7A7A7A
 $color-Gray_2: #D6D6D6
+$color-Gray-pagination: #A3A3A3
 $color-breadcrumbs: #515151
 
 
