--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -1,7 +1,7 @@
 @import ../common/_vars
 
 .wrapper
-    overflow-x: hidden
+    overflow: hidden
 
 .swiper-container-horizontal>.swiper-pagination-fraction
     max-width: 87%
