--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -45,7 +45,8 @@ header.header-bottom
 						a.breadcrumbs__link(href="home-page.html") Главная
 							span &nbsp;/&nbsp;
 					li.breadcrumbs__item
-						a.breadcrumbs__link._current(href="#") Мужчинам
+						a.breadcrumbs__link._current(href="#") Мужчинам&nbsp;
+
 	nav.sub-menu
 		.container.sub-menu__container
 			ul.sub-menu__list.sub-menu__list_for-men
