--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -40,6 +40,7 @@ button
 @import ./pages/collections
 @import ./pages/kinds-of-sports
 @import ./pages/subcategory
+@import ./pages/good-card
 @import ./common/footer
 @import ./common/_adaptive
 
