--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -22,10 +22,14 @@ $section-title-mobile: 18px
 $color-graphite: #3D3D3D
 $color-Black: #000000
 $color-black_2: #292929
+$color-black_3: #333333
 $color-White: #ffffff
 $color-placeholder: #DDDDDD
 $color-Gray_1: #7A7A7A
 $color-Gray_2: #D6D6D6
+$color-Gray_3: #999999
+$color-Gray_4: #F9F9F9
+$color-Gray_5: #E7E7E7
 $color-Gray-pagination: #A3A3A3
 $color-breadcrumbs: #515151
 
