--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -28,6 +28,11 @@
 .swiper-button-next
     right: 0
 
+.slider3__btn-next,
+.slider3__btn-prev
+    width: 100%
+    height: 100%
+
 .section
     width: 100%
     margin: 150px 0 0 0
